gap's in board fixed

--- a/Board/board.css
+++ b/Board/board.css
@@ -58,30 +58,28 @@ input {
 }
 
 table {
-    max-width: 1192px;
+    max-width: 1440px;
     margin-top: 64px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 24px;
-    margin-left: -10px;
 }
 
 .table-head {
-    max-width: 1192px;
+    max-width: 1440px;
     height: 28px;
     display: flex;
-    justify-content: space-between;
     font-size: 23px;
     font-weight: 700;
     padding: 0px 64px 0px 64px;
+    column-gap: 55px;
+    margin-bottom: 10px;
 }
 
 th {
     width: 244px;
     height: 28px;
     display: flex;
-    justify-content: space-between;
 }
 
 table button {
@@ -96,7 +94,7 @@ table button {
 }
 
 .table-body {
-    width: 976px;
+    max-width: 1440px;
     height: 28px;
     display: flex;
     justify-content: space-between;
@@ -116,7 +114,6 @@ table button {
 
 td {
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
     width: 244px;
     height: 28px;
@@ -407,7 +404,7 @@ td {
     display: flex;
     align-items: center;
     justify-content: center;
-   
+
 }
 
 .priority-big-buttons button {
@@ -423,7 +420,7 @@ td {
     justify-content: center;
     align-items: center;
     margin-left: 16px;
-   
+
 }
 
 .priority-big-buttons button img {
